--- a/A07_Arbol.ipynb
+++ b/A07_Arbol.ipynb
@@ -37,7 +37,7 @@
         "id": "mLL7AjaHVwoK",
         "outputId": "55637a15-98f9-46d4-fd63-67a9b4055e8b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "QMbSbvxeWfV2"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
         "id": "NkdaRuJrY6II",
         "outputId": "125c7a9e-56fe-4736-a7cc-ca444a459904"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -421,7 +421,7 @@
       "metadata": {
         "id": "OXJPGRLXWh0O"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,7 +434,7 @@
       "metadata": {
         "id": "uPHVr6vZXGqS"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -447,7 +447,7 @@
       "metadata": {
         "id": "wB0lwE-_Wh3B"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -462,7 +462,7 @@
         "id": "SLS87SJ0X12d",
         "outputId": "d93662fe-9c85-4c9c-a73b-f08524acadec"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -488,7 +488,7 @@
         "id": "bF_fFz0vX774",
         "outputId": "2076ab3e-76a9-492c-9213-493af78ae928"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,7 +519,7 @@
       "metadata": {
         "id": "_VKkPlvEX-EX"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +533,7 @@
       "metadata": {
         "id": "NX9gajVCYB3M"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -547,7 +547,7 @@
       "metadata": {
         "id": "F-qzG_ucYIJY"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -562,7 +562,7 @@
         "id": "HYlOopn3YU8X",
         "outputId": "41dd6523-59eb-467f-b440-3fbc4d5914ec"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -588,7 +588,7 @@
         "id": "LijZ-mxOYX5K",
         "outputId": "76cca11d-8e97-4909-e719-35caedd57b73"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -614,7 +614,7 @@
         "id": "nP2IndLSYeBk",
         "outputId": "77461f2b-b128-40e4-e9e6-48a204cd4719"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,7 +640,7 @@
         "id": "azLdJhtTYeJq",
         "outputId": "9336eb49-968c-48f2-f405-d4b5ba952b58"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +671,7 @@
       "metadata": {
         "id": "u8dgenvdcurm"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -685,7 +685,7 @@
       "metadata": {
         "id": "nQvJHlugcu8y"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -703,7 +703,7 @@
       "metadata": {
         "id": "VsoR3fordJS2"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +717,7 @@
       "metadata": {
         "id": "yJ2zaKzZdK71"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -732,7 +732,7 @@
         "id": "oyeM8p9AdMx8",
         "outputId": "0118c858-9ce7-4eab-d700-d327f316a1cc"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -758,7 +758,7 @@
         "id": "u96EnN7IdO9n",
         "outputId": "84dc234d-e2c9-49d0-84a7-08480be43ad0"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +784,7 @@
         "id": "XbuyN2pLdP04",
         "outputId": "75ea09c0-23a2-42d3-8fcb-b8d80d5cf092"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -810,7 +810,7 @@
         "id": "HVrhaLv1dRBa",
         "outputId": "3dbce5c0-fad3-4519-9325-b0601f467ebf"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -836,7 +836,7 @@
         "id": "bnrCLlZbdSTX",
         "outputId": "225ada77-699d-4a61-a500-fc7ecc63c9fd"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,7 +862,7 @@
         "id": "7uQNDKMDdTQC",
         "outputId": "9e91ef05-1575-4518-cf43-5d1a22850a59"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -875,6 +875,18 @@
           "execution_count": 88
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Conclusión:**\n",
+        "\n",
+        "El modelo polinómico de grado 2 ofrece el mejor equilibrio entre ajuste y generalización.\n",
+        "La regresión lineal es más sencilla pero menos precisa, mientras que el árbol de decisión es muy fuerte, aunque tiende a sobreajustar los datos."
+      ],
+      "metadata": {
+        "id": "vetwiRa9jv_Q"
+      }
     }
   ]
 }
